[package]
name = "solana-network-sdk"
version = "0.3.5"
edition = "2024"
authors = ["happyboy <superhappyboy1995@gmail.com>"]
description = "Implemented most of the commonly used practical transaction-related functions on the Solana network."
keywords = ["trade", "crypto", "finance", "solana"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/0xhappyboy/solana-network-sdk"

[dependencies]
solana-client = "3.0.0"
solana-sdk = "3.0.0"
solana-program = "3.0.0"
solana-transaction-status = "3.0.0"
tokio = { version = "1.0", features = ["full", "rt-multi-thread"] }
thiserror = "1.0"
bs58 = "0.5.1"
spl-token = "8.0.0"
bytemuck = "1.24.0"
serde_json = "1.0.145"
serde = "1.0.228"
base64 = "0.22.1"
reqwest = "0.12.25"
